# rust-study

./: .env  Cargo.toml  README.md  register.drawio  study.drawio  web.drawio
actix-web/: Cargo.toml  README.md  t_gorm.sql
actix-web/src/: main.rs
actix-web/src/api/: admin_api.rs  mod.rs  user_info_api.rs
actix-web/src/logic/: admin_logic.rs  mod.rs  user_info_logic.rs
actix-web/src/model/: user_info.rs
actix-web/src/util/: page.rs
api/: Cargo.toml
api/src/: main.rs
api/src/api/: index.rs  mod.rs  mysql.rs  redis.rs  test.rs  user.rs
api/src/config/: config.rs
api/src/entity/: mod.rs  page.rs  test.rs  user.rs
api/src/middleware/: auth.rs  error.rs  mod.rs
api/src/util/: mod.rs  r.rs  token.rs
client/src/: main.rs
diesel/: .env  Cargo.toml  README.md
diesel/src/: main.rs  models.rs  schema.rs
diesel/src/lib/: show_posts.rs
macro-example/: Cargo.toml
macro-example/src/: main.rs
monitor/: Cargo.toml
my_macro/: Cargo.toml
my_macro/src/: lib.rs
rbatis/: Cargo.toml  example.html  example_test.html
rbatis/src/: main.rs
rbatis/src/service/: admin.rs  biz_activity.rs  mod.rs
rust-tool/: config.json
rust-tool/actix/: api.txt  logic.txt  model.txt
rust-tool/salvo/: api.txt  logic.txt
salvo-web/: Cargo.toml  README.md
salvo-web/src/: main.rs
salvo-web/src/api/: admin_api.rs  file_api.rs  mod.rs  user_api.rs  user_info_api.rs
salvo-web/src/logic/: admin_logic.rs  mod.rs  user_info_logic.rs
salvo-web/src/model/: admin.rs  mod.rs
salvo-web/src/util/: assert.rs  mod.rs  page.rs  result.rs
server/src/: main.rs
socket/: README.md
socket/client/src/: main.rs
socket/server/src/: main.rs
src/: main.rs
src/api/: index.rs  mod.rs  mysql.rs  order.rs  redis.rs  test.rs  user.rs
src/config/: config.rs
src/entity/: mod.rs  test.rs  user.rs
src/middleware/: error.rs  mod.rs
src/service/: user.rs
src/test/: test.rs
src/util/: mod.rs  r.rs  token.rs
study/: Cargo.toml  README.md
study/src/: async_test.rs  closure.rs  command.rs  file.rs  interface.rs  list.rs  macro_demo.rs  main.rs  map.rs  test.rs  thread.rs  zip.rs
