[package]
name = "rust-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4" #web框架
futures-util = { version = "0.3.17", default-features = false, features = ["std"] } #中间件
env_logger = "0.7" #日志
serde = { version = "1.0", features = ["derive"] } #序列化
serde_json = "1" #json
futures = "0.3"

# 文件上传所需要的依赖-start
actix-multipart = "0.4" #文件上传依赖
sanitize-filename = "0.4" #文件名清理
uuid = { version = "1", features = ["v4"] } #uuid
#end

# 优雅停机-未调试好-start
parking_lot = "0.12"
# end


# redis-start
redis = { version = "0.22", default-features = false, features = ["tokio-comp", "connection-manager"] }
# end


# 数据库
sea-orm = { version = "0.9.3",features = [ "sqlx-mysql", "runtime-actix-native-tls", "macros" ] }
