[package]
name = "actix-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4" #web框架

# 序列化
serde = { version = "1.0.180", features = ["derive"] } #序列化
serde_json = "1"

# mysql
rbs = { version = "4.3.2" }
rbatis = { version = "4.0"}
rbdc-mysql={version= "4.3.12" }

