[package]
name = "diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel = { version = "2.0.0", features = ["mysql"] }
dotenvy = "0.15"


# 序列化
serde = { version = "1.0.180", features = ["derive"] } #序列化
serde_json = "1"