[package]
name = "rbatis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async runtime lib
tokio = { version = "1", features = ["full"] }
# logging(option)
log = "0.4"
fast_log = "1.5"
# serde/rbs (required)
serde = { version = "1", features = ["derive"] }
rbs = { version = "0.1"}
rbatis = { version = "4.0"}
# choose one rbdc drivier
rbdc-mysql={version="0.1"}

# -----------------------------------
# 环境库 .env 读取
dotenvy = "0.15"