[package]
name = "salvo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web依赖
salvo = { version= "0.49.1" }
tokio = { version = "1", features = ["macros"] }
# 序列化
serde = { version = "1.0.180", features = ["derive"] } #序列化
serde_json = "1"

# mysql
rbs = { version = "4.3.2" }
rbatis = { version = "4.0"}
rbdc-mysql={version= "4.3.12" }